<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:text="@string/console"
        android:textColor="@color/darkslategrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/colorEdgeEffect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/scan"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/local"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout"-->
    <!--        android:layout_width="420dp"-->
    <!--        android:layout_height="250dp"-->
    <!--        android:orientation="horizontal"-->
    <!--        tools:ignore="MissingConstraints"-->
    <!--        tools:layout_editor_absoluteX="-1dp"-->
    <!--        tools:layout_editor_absoluteY="89dp"></LinearLayout>-->

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/clear_data"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="10dp"
        android:text="@string/kill_all"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#ffffff"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#aaFFFFFF"
            android:text="Fingerprint Info"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:background="#FFFFFF"
        android:backgroundTint="#aaFFFFFF"
        android:gravity="center"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/saved"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="#"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/scaned"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="#"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/aps"
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loc_x"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="X"
                android:inputType="numberDecimal"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loc_y"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="Y"
                android:inputType="numberDecimal"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loc_z"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="Loc"
                android:inputType="text"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loc_building"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="B"
                android:inputType="text"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loc_floor"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="F"
                android:inputType="number"
                android:text="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loc_room"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:hint="R"
                android:inputType="text"
                android:text="0" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>